# androidEGLDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/yuan/icespring/openglesdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jniapi.cpp  logger.h  native_render.cpp  renderer.cpp  renderer.h
app/src/main/java/yuan/icespring/openglesdemo/: GL2JNILib.java  GLESlib.java  GLSurfaceViewDrawActivity.java  GLSurfaceViewDrawTexurueActivity.java  GLSurfaceViewNativeDrawActivity.java  GLUtils.java  MainActivity.java  SurfaceViewNatvieDrawActivity.java  TextureViewDraw2Activity.java  TextureViewDrawActivity.java  TextureViewNativeDrawActivity.java
app/src/main/java/yuan/icespring/openglesdemo/gles/: Drawable2d.java  EglCore.java  EglSurfaceBase.java  FlatShadedProgram.java  FullFrameRect.java  GeneratedTexture.java  GlUtil.java  OffscreenSurface.java  Sprite2d.java  Texture2dProgram.java  WindowSurface.java
app/src/main/res/layout/: activity_glsurface_view_draw.xml  activity_glsurface_view_native_draw.xml  activity_main.xml  activity_surface_view_natvie_draw.xml  activity_texture_view_draw.xml
app/src/test/java/yuan/icespring/openglesdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
